Remove unnecessary build code