@@ -42,15 +42,6 @@ compileTestJava{
     options.compilerArgs= ["--enable-preview"]
 }
 
-tasks.withType(JavaCompile) {
-    options.compilerArgs += "--enable-preview"
-}
-tasks.withType(Test) {
-    jvmArgs += "--enable-preview"
-}
-tasks.withType(JavaExec) {
-    jvmArgs += "--enable-preview"
-}
 
 task getClassPath {
     doLast {
